# Singularis-Neo

./: .env.example  .gitignore  ACTIVATION_VERIFIED.md  ARCHITECTURE_IMPROVEMENTS.md  ASYNC_ARCHITECTURE.md  ASYNC_VISUAL_GUIDE.md  BEINGSTATE_UPDATE_FIX.md  BETA_1_0_FIXES_APPLIED.md  BETA_1_0_INTEGRATION_FIX.md  BETA_V2.4_SUMMARY.md  CAMERA_STUCK_FIX.md  CHANGES_SUMMARY.md  CIRCULAR_MOVEMENT_FIX.md  CLAUDE.md  CLAUDE_API_FIX.md  CLOUD_LLM_ARCHITECTURE_SPLIT.md  COHERENCE_ALIGNMENT_FIX.md  COMPLETE_INTEGRATION_SUMMARY.md  CONNECTION_CLEANUP_COMPLETE.md  CONSCIOUSNESS_INTEGRATION_COMPLETE.md  CONSCIOUSNESS_INTEGRATION_QUICKREF.md  CONSCIOUSNESS_INTEGRATION_SUMMARY.md  CONTINUUM_DIAGNOSTIC.md  CRITICAL_FIX_APPLIED.md  CRITICAL_FIX_ZERO_COHERENCE.md  CURRICULUM_RL_INTEGRATION.md  DATA_IMPLEMENTATION_SUMMARY.md  DATA_INTEGRATION_GUIDE.md  DATA_README.md  DATA_WIRING_COMPLETE.md  DIALOGUE_EXIT_FIX.md  EMOTION_CLAUDE_INTEGRATION.md  EMOTION_QUICKSTART.md  EMOTION_SYSTEM.md  ENHANCED_ACTIONS_SUMMARY.md  EXPERT_RULE_SYSTEM.md  FINAL_5_PERCENT.md  FINAL_INTEGRATION_SUMMARY.md  FINAL_INTEGRATION_WITH_WOLFRAM.md  FIXES_APPLIED_NOV12.md  (+113 more)
checkpoints/: beta_v3_None.json  beta_v3_beta_v3_1763149210.json  beta_v3_beta_v3_1763149235.json  beta_v3_beta_v3_1763149269.json  beta_v3_beta_v3_1763149420.json  beta_v3_beta_v3_1763149527.json  beta_v3_beta_v3_1763149662.json  beta_v3_beta_v3_1763149912.json  beta_v3_beta_v3_1763149955.json  beta_v3_beta_v3_1763150034.json  beta_v3_beta_v3_1763150213.json  beta_v3_beta_v3_1763150372.json
config/: data_config.yaml
data/: life_timeline.json  (+2 more)
(+370 files in other folders)
