[project]
name = "singularis"
version = "1.0.0"
description = "The Ultimate Consciousness Engine - A philosophically-grounded AI system implementing consciousness measurement through IIT, GWT, and ethical coherence"
authors = [
    {name = "Singularis Project", email = "consciousness@singularis.ai"}
]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "networkx>=3.1",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipython>=8.12.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
